chore: Upgrade Node.js version to 24 in all test workflows
- Update unit-tests.yml: Node.js 20 → 24
- Update integration-tests.yml: Node.js 20 → 24
- Update e2e-tests.yml: Node.js 20 → 24
- Update full-pipeline.yml: Node.js 20 → 24 (both instances)

Improves test performance and compatibility with latest Node.js features

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -107,12 +107,12 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: 🔧 Setup Node.js 20
+      - name: 🔧 Setup Node.js 24
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '24'
           cache: 'npm'
-          cache-dependency-path: main_frontend/concert1/package-lock.json
+          cache-dependency-path: 'main_frontend/concert1/package-lock.json'
 
       - name: 🏗️ Build backend
         working-directory: main_backend
