--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -24,12 +24,12 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js 20
+      - name: 🔧 Setup Node.js 24
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '24'
           cache: 'npm'
-          cache-dependency-path: main_frontend/concert1/package-lock.json
+          cache-dependency-path: 'main_frontend/concert1/package-lock.json'
 
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
