--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,12 +23,12 @@ jobs:
       - name: 📥 Checkout
         uses: actions/checkout@v4
 
-      - name: 🔧 Setup Node.js 20
+      - name: 🔧 Setup Node.js 24
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '24'
           cache: 'npm'
-          cache-dependency-path: main_frontend/concert1/package-lock.json
+          cache-dependency-path: 'main_frontend/concert1/package-lock.json'
 
       - name: 📦 Install dependencies
         working-directory: main_frontend/concert1
