--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -111,6 +111,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
+          cache: false
 
       - name: 🏗️ Build backend
         working-directory: main_backend
