--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -99,11 +99,11 @@ jobs:
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔐 Log in to Container Registry
+      - name: 🔐 Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📥 Download backend artifact
@@ -116,10 +116,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: main_backend
+          file: main_backend/Dockerfile.k8s
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/concert-backend:latest
+            ghcr.io/${{ github.repository_owner }}/concert-backend:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -133,10 +134,11 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: main_frontend/concert1
+          file: main_frontend/concert1/Dockerfile.k8s
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/concert-frontend:latest
+            ghcr.io/${{ github.repository_owner }}/concert-frontend:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
