--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -37,7 +37,11 @@ jobs:
 
       - name: 🧪 Run backend tests
         working-directory: main_backend
-        run: mvn -B clean test
+        env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
+        run: |
+          export JAVA_HOME="${JAVA_HOME}"
+          mvn -B -DforkCount=1 -DreuseForks=false clean test
 
       - name: 📦 Build backend JAR
         working-directory: main_backend
@@ -102,8 +106,8 @@ jobs:
       - name: 🔐 Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 📥 Download backend artifact
@@ -218,3 +222,85 @@ jobs:
         with:
           name: k8s-deployment-report
           path: deployment-report.md
+
+  notify:
+    name: Send Notifications
+    runs-on: ubuntu-latest
+    needs: [ backend-tests, frontend-tests, build-images, deploy-k8s ]
+    if: always()
+    
+    steps:
+      - name: 📊 Determine workflow status
+        id: status
+        run: |
+          if [ "${{ needs.backend-tests.result }}" == "failure" ] || \
+             [ "${{ needs.frontend-tests.result }}" == "failure" ] || \
+             [ "${{ needs.build-images.result }}" == "failure" ] || \
+             [ "${{ needs.deploy-k8s.result }}" == "failure" ]; then
+            echo "status=failure" >> $GITHUB_OUTPUT
+            echo "emoji=❌" >> $GITHUB_OUTPUT
+          elif [ "${{ needs.backend-tests.result }}" == "cancelled" ] || \
+               [ "${{ needs.frontend-tests.result }}" == "cancelled" ] || \
+               [ "${{ needs.build-images.result }}" == "cancelled" ] || \
+               [ "${{ needs.deploy-k8s.result }}" == "cancelled" ]; then
+            echo "status=cancelled" >> $GITHUB_OUTPUT
+            echo "emoji=⚠️" >> $GITHUB_OUTPUT
+          else
+            echo "status=success" >> $GITHUB_OUTPUT
+            echo "emoji=✅" >> $GITHUB_OUTPUT
+          fi
+
+      - name: 📢 Send Slack notification
+        if: env.SLACK_WEBHOOK_URL != '' || env.SLACK_BOT_TOKEN != ''
+        uses: slackapi/slack-github-action@v1.24.0
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        with:
+          payload: |
+            {
+              "text": "${{ steps.status.outputs.emoji }} K8s Deployment ${{ steps.status.outputs.status }}",
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "${{ steps.status.outputs.emoji }} K8s Deployment Pipeline"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Status:*\n${{ steps.status.outputs.status }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Branch:*\n${{ github.ref_name }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Commit:*\n${{ github.sha }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Author:*\n${{ github.actor }}"
+                    }
+                  ]
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View Workflow"
+                      },
+                      "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                    }
+                  ]
+                }
+              ]
+            }
