--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -145,7 +145,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-images
     timeout-minutes: 20
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && vars.K8S_ENABLED == 'true'
 
     steps:
       - name: 📥 Checkout
@@ -153,9 +153,33 @@ jobs:
 
       - name: 🔐 Set up Kubeconfig
         run: |
+          if [ -z "${{ secrets.KUBE_CONFIG }}" ]; then
+            echo "❌ Error: KUBE_CONFIG secret is not set"
+            echo "Please add your Kubernetes config as a base64-encoded secret"
+            echo "To create: cat ~/.kube/config | base64 | pbcopy"
+            echo "Then add it as KUBE_CONFIG secret in GitHub repo settings"
+            exit 1
+          fi
+          
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
+
+      - name: 🔍 Verify Kubernetes connection
+        run: |
+          echo "Testing connection to Kubernetes cluster..."
+          if ! kubectl cluster-info &> /dev/null; then
+            echo "❌ Error: Cannot connect to Kubernetes cluster"
+            echo "Current kubeconfig context:"
+            kubectl config current-context || echo "No context available"
+            echo ""
+            echo "Available contexts:"
+            kubectl config get-contexts || echo "No contexts available"
+            exit 1
+          fi
+          echo "✅ Successfully connected to Kubernetes cluster"
+          kubectl cluster-info
+          kubectl version --short
 
       - name: 📋 Apply Kubernetes manifests
         run: |
