--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -145,7 +145,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-images
     timeout-minutes: 20
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    if: false  # Temporarily disabled - requires publicly accessible K8s cluster
 
     steps:
       - name: 📥 Checkout
