fix: Add explicit logging to Kind config creation (FINAL FIX)
- Add clear echo statements showing config file creation
- Show file path explicitly
- Update step name to show this is the FIXED version
- This makes it obvious when new code is running vs old code

Previous runs showing error were using OLD code before ea4652e
This commit adds logging to make it crystal clear when FIXED code runs

--- a/.github/workflows/k8s-deploy-with-tests.yml
+++ b/.github/workflows/k8s-deploy-with-tests.yml
@@ -150,6 +150,7 @@ jobs:
 
       - name: 🔧 Create Kind config
         run: |
+          echo "🔧 Creating Kind cluster configuration file..."
           cat > kind-config.yaml << 'EOF'
           kind: Cluster
           apiVersion: kind.x-k8s.io/v1alpha4
@@ -163,9 +164,12 @@ jobs:
               hostPort: 30081
               protocol: TCP
           EOF
+          echo "✅ Kind config file created successfully"
+          echo "📄 Configuration:"
           cat kind-config.yaml
+          echo "✅ Config file ready at: $(pwd)/kind-config.yaml"
 
-      - name: 🔧 Create Kind cluster
+      - name: 🔧 Create Kind cluster (FIXED - using config file)
         uses: helm/kind-action@v1.10.0
         with:
           cluster_name: concert-test
