fix: Use correct MySQL socket path for health probes
Critical fix for probe failures:
- Changed from '-h localhost' to '-S /var/lib/mysql/mysql.sock'
- MySQL 8.0 creates socket at /var/lib/mysql/mysql.sock, not /var/run/mysqld/mysqld.sock
- Probes were failing with 'Can't connect to local MySQL server through socket'
- MySQL was actually running but probes couldn't connect

This fixes the continuous restart loop and probe failures.

Logs showed:
  socket: '/var/lib/mysql/mysql.sock'  port: 3306
But probes were checking:
  /var/run/mysqld/mysqld.sock (doesn't exist)

Container had 3 restarts due to failed liveness probes.

--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -81,8 +81,8 @@ spec:
             command:
             - mysqladmin
             - ping
-            - -h
-            - localhost
+            - -S
+            - /var/lib/mysql/mysql.sock
           initialDelaySeconds: 60
           periodSeconds: 10
           timeoutSeconds: 5
@@ -92,8 +92,8 @@ spec:
             command:
             - mysqladmin
             - ping
-            - -h
-            - localhost
+            - -S
+            - /var/lib/mysql/mysql.sock
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
