--- a/main_frontend/concert1/cypress/tsconfig.json
+++ b/main_frontend/concert1/cypress/tsconfig.json
@@ -1,15 +1,9 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "lib": ["ES2020", "DOM"],
-    "types": ["cypress", "node"],
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "types": ["cypress"]
   },
   "include": [
-    "cypress/**/*.ts"
+    "**/*.ts"
   ]
 }
