--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -15,8 +15,7 @@
     "cy:open": "cypress open",
     "test:e2e": "cypress run --browser electron",
     "test:e2e:headless": "cypress run --browser electron --headless",
-    "test:e2e:coverage": "cypress run --browser electron --headless && nyc report --reporter=html",
-    "test:all": "npm run test:coverage && npm run test:e2e:coverage"
+    "test:all": "npm run test:coverage && npm run test:e2e:headless"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -27,7 +26,6 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.13.4",
     "@nuxt/test-utils": "3.19.2",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/user-event": "14.5.2",
@@ -37,10 +35,9 @@
     "@vitest/coverage-v8": "3.2.0",
     "@vitest/ui": "3.2.0",
     "@vue/test-utils": "2.4.6",
-    "cypress": "13.17.0",
+    "cypress": "^15.5.0",
     "happy-dom": "15.11.7",
     "jsdom": "25.0.1",
-    "nyc": "17.1.0",
     "typescript": "^5.9.3",
     "vitest": "3.2.0"
   }
