chore: Update .gitignore to exclude terraform provider binaries and state files

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,12 @@ tmp/
 temp/
 *.tmp
 *.bak
+
+# Terraform
+.terraform/
+.terraform.lock.hcl
+terraform.tfvars
+tfplan*
+*.tfstate
+*.tfstate.backup
+crash.log
