Add AWS S3 integration, frontend API normalization, and deployment docs

--- a/main_backend/src/main/resources/application-prod.properties
+++ b/main_backend/src/main/resources/application-prod.properties
@@ -42,3 +42,11 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 
 # CORS Configuration
 spring.web.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:3000}
+
+# AWS S3 Configuration for Production
+# Use environment variables for production credentials
+aws.region=${AWS_REGION:us-east-1}
+aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:my-event-pictures-bucket}
+aws.s3.presigned-urls-enabled=${AWS_S3_PRESIGNED_URLS_ENABLED:true}
+aws.s3.expiration-minutes=${AWS_S3_EXPIRATION_MINUTES:60}
+aws.s3.public-access=${AWS_S3_PUBLIC_ACCESS:false}
