--- a/main_backend/src/test/resources/application-docker.properties
+++ b/main_backend/src/test/resources/application-docker.properties
@@ -15,3 +15,9 @@ app.jwtExpirationInMs=3600000
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.testcontainers=INFO
+
+# AWS S3 Configuration for Docker tests
+aws.s3.event-pictures-bucket=docker-test-bucket
+aws.region=us-east-1
+aws.s3.presigned-urls-enabled=false
+aws.s3.public-access=true
