--- a/main_frontend/concert1/package.json
+++ b/main_frontend/concert1/package.json
@@ -41,7 +41,9 @@
     "happy-dom": "15.11.7",
     "jsdom": "25.0.1",
     "nyc": "17.1.0",
+    "sass-embedded": "^1.93.3",
     "typescript": "^5.9.3",
     "vitest": "3.2.0"
-  }
+  },
+  "version": "1.0.0"
 }
