Cleanup: remove unnecessary files and AWS resources

--- a/main_backend/src/main/resources/application-docker.properties
+++ b/main_backend/src/main/resources/application-docker.properties
@@ -19,6 +19,7 @@ jwt.expiration=604800
 
 # AWS S3 Configuration for Docker profile
 aws.s3.event-pictures-bucket=docker-test-bucket
+aws.s3.user-avatars-bucket=docker-test-avatars
 aws.region=us-east-1
 aws.s3.presigned-urls-enabled=false
 aws.s3.public-access=true
