--- a/main_backend/src/main/resources/application.properties
+++ b/main_backend/src/main/resources/application.properties
@@ -32,6 +32,10 @@ logging.level.com.concert=DEBUG
 # Use AWS_ prefix for environment variables: AWS_REGION, AWS_S3_EVENT_PICTURES_BUCKET
 aws.region=${AWS_REGION:us-east-1}
 aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:concert-event-pictures}
+aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:concert-user-avatars}
 aws.s3.presigned-urls-enabled=${AWS_S3_PRESIGNED_URLS_ENABLED:true}
 aws.s3.presigned-url-expiration-minutes=${AWS_S3_PRESIGNED_URL_EXPIRATION_MINUTES:60}
 aws.s3.public-access=${AWS_S3_PUBLIC_ACCESS:false}
+
+# CORS (allow overriding origins from environment to support API Gateway/custom domains)
+app.cors.allowed-origins=${APP_CORS_ALLOWED_ORIGINS:http://localhost:3000,http://concert-dev-frontend-142fee22.s3-website-us-east-1.amazonaws.com,https://concert-dev-frontend-142fee22.s3-website-us-east-1.amazonaws.com,https://*.execute-api.us-east-1.amazonaws.com}
