--- a/main_backend/src/main/resources/application-dev.properties
+++ b/main_backend/src/main/resources/application-dev.properties
@@ -3,5 +3,6 @@
 ## Development
 aws.region=us-east-1
 aws.s3.event-pictures-bucket=concert-dev-bucket
+aws.s3.user-avatars-bucket=concert-dev-avatars
 aws.s3.presigned-urls-enabled=false
 aws.s3.public-access=true
