--- a/main_backend/src/main/resources/application-prod.properties
+++ b/main_backend/src/main/resources/application-prod.properties
@@ -47,6 +47,7 @@ spring.web.cors.allowed-origins=${ALLOWED_ORIGINS:http://localhost:3000}
 # Use environment variables for production credentials
 aws.region=${AWS_REGION:us-east-1}
 aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:my-event-pictures-bucket}
+aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:my-user-avatars-bucket}
 aws.s3.presigned-urls-enabled=${AWS_S3_PRESIGNED_URLS_ENABLED:true}
 aws.s3.expiration-minutes=${AWS_S3_EXPIRATION_MINUTES:60}
 aws.s3.public-access=${AWS_S3_PUBLIC_ACCESS:false}
