--- a/main_backend/src/main/resources/application.properties
+++ b/main_backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
-# Default MySQL Configuration (for local development)
-spring.datasource.url=jdbc:mysql://localhost:3306/devop_db
-spring.datasource.username=root
-spring.datasource.password=password
+# MySQL Configuration (override via environment variables in production)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/devop_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration
@@ -31,8 +31,8 @@ logging.level.com.concert=DEBUG
 # AWS Configuration (override via environment variables in production)
 # Use AWS_ prefix for environment variables: AWS_REGION, AWS_S3_EVENT_PICTURES_BUCKET
 aws.region=${AWS_REGION:us-east-1}
-aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:concert-event-pictures}
-aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:concert-user-avatars}
+aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:concert-event-pictures-useast1-161326240347}
+aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:concert-user-avatars-useast1-161326240347}
 aws.s3.presigned-urls-enabled=${AWS_S3_PRESIGNED_URLS_ENABLED:true}
 aws.s3.presigned-url-expiration-minutes=${AWS_S3_PRESIGNED_URL_EXPIRATION_MINUTES:60}
 aws.s3.public-access=${AWS_S3_PUBLIC_ACCESS:false}
