--- a/main_backend/src/main/resources/application-prod.properties
+++ b/main_backend/src/main/resources/application-prod.properties
@@ -2,13 +2,13 @@
 server.port=8080
 
 # Database Configuration (environment variables will override these)
-spring.datasource.url=jdbc:mysql://mysql:3306/concert_db
-spring.datasource.username=concert_user
-spring.datasource.password=concert_password
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/concert}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Configuration for Production
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
