--- a/main_backend/src/main/resources/application.properties
+++ b/main_backend/src/main/resources/application.properties
@@ -33,9 +33,10 @@ logging.level.com.concert=DEBUG
 
 # AWS Configuration (override via environment variables in production)
 # Use AWS_ prefix for environment variables: AWS_REGION, AWS_S3_EVENT_PICTURES_BUCKET
-aws.region=${AWS_REGION:us-east-1}
-aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:concert-event-pictures-useast1-161326240347}
-aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:concert-user-avatars-useast1-161326240347}
+aws.region=${AWS_REGION:ap-southeast-1}
+aws.s3.event-pictures-bucket=${AWS_S3_EVENT_PICTURES_BUCKET:concert-event-pictures-singapore-161326240347}
+aws.s3.user-avatars-bucket=${AWS_S3_USER_AVATARS_BUCKET:concert-user-avatars-singapore-161326240347}
+aws.cloudfront.images-url=${AWS_CLOUDFRONT_IMAGES_URL:https://d3qkurc1gwuwno.cloudfront.net}
 aws.s3.presigned-urls-enabled=${AWS_S3_PRESIGNED_URLS_ENABLED:true}
 aws.s3.presigned-url-expiration-minutes=${AWS_S3_PRESIGNED_URL_EXPIRATION_MINUTES:60}
 aws.s3.public-access=${AWS_S3_PUBLIC_ACCESS:false}
