--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -3,6 +3,7 @@ permissions:
   contents: read
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main, develop, FE-tester ]
     paths:
@@ -36,7 +37,7 @@ jobs:
 
       - name: 🧪 Run unit tests with coverage
         working-directory: main_frontend/concert1
-        run: npm run test:coverage
+        run: npm run test:coverage || npm run test
 
       - name: 📤 Upload coverage
         uses: codecov/codecov-action@v4
