Enable workflows for release branches

--- a/.github/workflows/quick-test.yml
+++ b/.github/workflows/quick-test.yml
@@ -3,7 +3,7 @@ name: Quick Tests
 on:
   workflow_dispatch:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, 'release/**' ]
 
 jobs:
   quick-backend:
