--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,7 +5,7 @@ permissions:
 on:
   workflow_dispatch:
   push:
-    branches: [ main, develop, FE-tester ]
+    branches: [ main, develop, FE-tester, 'release/**' ]
     paths:
       - 'main_frontend/concert1/**'
       - 'main_backend/src/**'
