--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -26,6 +26,15 @@ jobs:
       docker:
         image: docker:24-dind
         options: --privileged
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     
     steps:
       - name: 📥 Checkout
@@ -59,6 +68,7 @@ jobs:
           mvn -B -DforkCount=1 -DreuseForks=false clean test
         env:
           TESTCONTAINERS_RYUK_DISABLED: false
+          SPRING_PROFILES_ACTIVE: test
         continue-on-error: false
 
       - name: 📊 Generate JaCoCo report
