--- a/.github/workflows/quick-test.yml
+++ b/.github/workflows/quick-test.yml
@@ -11,6 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: 📥 Checkout
         uses: actions/checkout@v4
@@ -27,6 +38,8 @@ jobs:
         run: |
           mvn -B clean compile
           mvn -B test -Dtest=UserTest,EventTest,BookingTest
+        env:
+          SPRING_PROFILES_ACTIVE: test
 
   quick-frontend:
     name: Quick Frontend Test
