--- a/main_backend/src/test/resources/application-test.properties
+++ b/main_backend/src/test/resources/application-test.properties
@@ -30,3 +30,7 @@ aws.s3.user-avatars-bucket=test-avatar-bucket
 aws.region=us-east-1
 aws.s3.presigned-urls-enabled=false
 aws.s3.public-access=true
+
+# Redis Configuration for tests (disabled)
+spring.data.redis.repositories.enabled=false
+spring.cache.type=none
