--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # ===========================
-# MM Concerts Project (.gitignore)
+# MM Events Project (.gitignore)
 # ===========================
 
 # === Backend (Spring Boot) ===
