chore: disable AWS and K8s deployment tests
Changes:
- Disabled deploy-staging job (set if: false)
- Disabled deploy-production job (set if: false)
- Pipeline now only runs build and test stages
- No deployment to AWS or Kubernetes clusters

Rationale:
- Focus on testing build and test pipeline
- Avoid deployment costs and complexity
- Deployment jobs can be re-enabled when needed

Active Jobs:
 Build Backend Docker Image
 Build Frontend Docker Image
 Test Backend
 Test Frontend
 Security Scan (on PRs and main)
 Notify Slack

Disabled Jobs:
 Deploy to Staging
 Deploy to Production

Branch: release/v1.0.0
Date: November 21, 2025

--- a/.github/workflows/k8s-deploy.yml
+++ b/.github/workflows/k8s-deploy.yml
@@ -282,11 +282,8 @@ jobs:
     name: Deploy to Staging
     needs: [build-backend, build-frontend, test-backend, test-frontend]
     runs-on: ubuntu-latest
-    if: |
-      (github.ref == 'refs/heads/k8s-development' || 
-       github.ref == 'refs/heads/develop' ||
-       startsWith(github.ref, 'refs/heads/release/')) && 
-      github.event_name == 'push'
+    # DISABLED: Skip AWS and K8s deployment tests
+    if: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -362,7 +359,8 @@ jobs:
     name: Deploy to Production
     needs: [build-backend, build-frontend, test-backend, test-frontend]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    # DISABLED: Skip AWS and K8s deployment tests
+    if: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
