--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -209,7 +209,7 @@ jobs:
     name: Backend Integration Tests
     runs-on: ubuntu-latest
     needs: test-backend-unit
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/'))
     services:
       mysql:
         image: mysql:8.0
@@ -301,7 +301,7 @@ jobs:
     name: Build Docker Images
     runs-on: ubuntu-latest
     needs: [test-backend-unit, test-frontend-unit, code-quality]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/heads/release/'))
     permissions:
       contents: read
       packages: write
