--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -319,14 +319,19 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Convert repository owner to lowercase
+        id: lowercase
+        run: |
+          echo "owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - name: Extract metadata for backend
         id: meta-backend
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/morningmores/concert-backend
+          images: ghcr.io/${{ steps.lowercase.outputs.owner }}/concert-backend
           tags: |
             type=ref,event=branch
             type=sha,prefix={{branch}}-
@@ -351,7 +356,7 @@ jobs:
         id: meta-frontend
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/morningmores/concert-frontend
+          images: ghcr.io/${{ steps.lowercase.outputs.owner }}/concert-frontend
           tags: |
             type=ref,event=branch
             type=sha,prefix={{branch}}-
