fix: add top-level permissions for GITHUB_TOKEN
Add workflow-level permissions:
- contents: read (for checkout)
- packages: write (for pushing to GHCR)
- id-token: write (for enhanced security)

Without top-level permissions, GITHUB_TOKEN defaults to read-only.
Job-level permissions alone are not sufficient.

Fixes 403 Forbidden when pushing Docker images to ghcr.io

--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -17,6 +17,11 @@ on:
       - 'release/**'
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+
 concurrency:
   group: pipeline-${{ github.ref }}
   cancel-in-progress: true
