--- a/.github/workflows/full-pipeline.yml
+++ b/.github/workflows/full-pipeline.yml
@@ -320,17 +320,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Convert repository owner to lowercase
         id: lowercase
         run: |
           echo "owner=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ steps.lowercase.outputs.owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          logout: false
+
+      - name: Verify GHCR authentication
+        run: |
+          echo "Testing GHCR authentication..."
+          docker pull hello-world || true
+          echo "Login successful for user: ${{ steps.lowercase.outputs.owner }}"
 
       - name: Extract metadata for backend
         id: meta-backend
