--- a/.github/workflows/quick-tests.yml
+++ b/.github/workflows/quick-tests.yml
@@ -1,4 +1,4 @@
-name: Quick Unit Tests
+name: Unit Tests & E2E Pipeline
 
 on:
   push:
@@ -24,7 +24,7 @@ concurrency:
 jobs:
   test-backend:
     name: Backend Unit Tests
-    runs-on: [ubuntu-latest]
+    runs-on: [self-hosted, linux, ARM64]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,7 +53,7 @@ jobs:
 
   test-frontend:
     name: Frontend Unit Tests
-    runs-on: [ubuntu-latest]
+    runs-on: [self-hosted, linux, ARM64]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -83,20 +83,42 @@ jobs:
           path: main_frontend/concert1/coverage/
           retention-days: 3
 
+  e2e-tests:
+    name: E2E Tests
+    needs: [test-backend, test-frontend]
+    runs-on: [self-hosted, linux, ARM64]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run E2E tests
+        run: |
+          cd main_frontend/concert1
+          npm run test:e2e
+
+      - name: Upload E2E results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-test-results
+          path: main_frontend/concert1/cypress/screenshots/
+          retention-days: 3
+
   test-summary:
     name: Test Summary
-    needs: [test-backend, test-frontend]
-    runs-on: [ubuntu-latest]
+    needs: [test-backend, test-frontend, e2e-tests]
+    runs-on: [self-hosted, linux, ARM64]
     if: always()
     steps:
       - name: Check test results
         run: |
-          echo "📊 Test Pipeline Summary"
-          echo "========================"
-          echo "Backend Tests: ${{ needs.test-backend.result }}"
-          echo "Frontend Tests: ${{ needs.test-frontend.result }}"
+          echo "📊 Complete Test Pipeline Summary"
+          echo "=================================="
+          echo "Backend Unit Tests: ${{ needs.test-backend.result }}"
+          echo "Frontend Unit Tests: ${{ needs.test-frontend.result }}"
+          echo "E2E Tests: ${{ needs.e2e-tests.result }}"
           echo ""
-          if [ "${{ needs.test-backend.result }}" == "success" ] && [ "${{ needs.test-frontend.result }}" == "success" ]; then
+          if [ "${{ needs.test-backend.result }}" == "success" ] && [ "${{ needs.test-frontend.result }}" == "success" ] && [ "${{ needs.e2e-tests.result }}" == "success" ]; then
             echo "✅ All tests passed!"
             exit 0
           else
