Fix stuck jobs - simplify runner labels
- Changed from [self-hosted, linux, ARM64] to just self-hosted
- Removes label matching issues causing jobs to wait
- Runner is active but jobs were stuck on specific labels
- Also fixed definePageMeta Vue.js build error

--- a/.github/workflows/k8s-tests.yml
+++ b/.github/workflows/k8s-tests.yml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   backend-test:
     name: Backend Tests (K8s)
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     
     steps:
       - name: Checkout code
@@ -45,7 +45,7 @@ jobs:
 
   frontend-test:
     name: Frontend Tests (K8s)
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     
     steps:
       - name: Checkout code
@@ -80,7 +80,7 @@ jobs:
   k8s-deployment-test:
     name: K8s Deployment Test
     needs: [backend-test, frontend-test]
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -117,7 +117,7 @@ spec:
   test-summary:
     name: K8s Test Summary
     needs: [backend-test, frontend-test, k8s-deployment-test]
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     if: always()
     steps:
       - name: Check test results
