--- a/.github/workflows/quick-tests.yml
+++ b/.github/workflows/quick-tests.yml
@@ -24,7 +24,7 @@ concurrency:
 jobs:
   test-backend:
     name: Backend Unit Tests
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
 
   test-frontend:
     name: Frontend Unit Tests
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -88,7 +88,7 @@ jobs:
   e2e-tests:
     name: E2E Tests
     needs: [test-backend, test-frontend]
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -110,7 +110,7 @@ jobs:
   test-summary:
     name: Test Summary
     needs: [test-backend, test-frontend, e2e-tests]
-    runs-on: [self-hosted, linux, ARM64]
+    runs-on: self-hosted
     if: always()
     steps:
       - name: Check test results
