Target EC2 runner instead of K8s runners
- Changed runs-on to [self-hosted, linux] to avoid K8s runners
- Our runner: ip-192-168-10-118 (EC2)
- Avoid: concert-runners-6twxm-* (K8s pods)
- Should now run on correct runner

--- a/.github/workflows/quick-tests.yml
+++ b/.github/workflows/quick-tests.yml
@@ -20,7 +20,7 @@ concurrency:
 jobs:
   test-backend:
     name: Backend Unit Tests
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -50,7 +50,7 @@ jobs:
 
   test-frontend:
     name: Frontend Unit Tests
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -84,7 +84,7 @@ jobs:
   e2e-tests:
     name: E2E Tests
     needs: [test-backend, test-frontend]
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -106,7 +106,7 @@ jobs:
   test-summary:
     name: Test Summary
     needs: [test-backend, test-frontend, e2e-tests]
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
     if: always()
     steps:
       - name: Check test results
