Fix YAML syntax and runner labels
- Fixed k8s-tests.yml YAML syntax error (line 98-101)
- Changed all runners to just 'self-hosted' (no linux label)
- Should resolve workflow validation and runner matching issues

--- a/.github/workflows/k8s-tests.yml
+++ b/.github/workflows/k8s-tests.yml
@@ -94,7 +94,8 @@ jobs:
           else
             echo "⚠️ Backend deployment manifest missing - creating basic one"
             mkdir -p k8s
-            echo "apiVersion: apps/v1
+            cat > k8s/backend-deployment.yaml << 'EOF'
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
@@ -110,7 +111,8 @@ spec:
     spec:
       containers:
       - name: backend
-        image: backend:latest" > k8s/backend-deployment.yaml
+        image: backend:latest
+EOF
             echo "✅ Created basic backend deployment manifest"
           fi
 
