--- a/.github/workflows/test-trigger.yml
+++ b/.github/workflows/test-trigger.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test-runner:
     name: Test Runner Connection
-    runs-on: [self-hosted, linux]
+    runs-on: self-hosted
     steps:
       - name: Test runner
         run: |
