Fix YAML syntax and add simple test
- Fixed heredoc syntax in k8s-tests.yml line 115
- Added simple-test.yml to verify runner works
- Should resolve workflow validation errors

--- a/.github/workflows/k8s-tests.yml
+++ b/.github/workflows/k8s-tests.yml
@@ -94,7 +94,7 @@ jobs:
           else
             echo "⚠️ Backend deployment manifest missing - creating basic one"
             mkdir -p k8s
-            cat > k8s/backend-deployment.yaml << 'EOF'
+            cat > k8s/backend-deployment.yaml <<EOF
 apiVersion: apps/v1
 kind: Deployment
 metadata:
