--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -1,44 +1,119 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: concert-backend
+  name: backend
+  labels:
+    app: backend
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: concert-backend
+      app: backend
   template:
     metadata:
       labels:
-        app: concert-backend
+        app: backend
     spec:
       containers:
       - name: backend
-        image: 161326240347.dkr.ecr.ap-southeast-1.amazonaws.com/concert-backend:latest
+        image: ghcr.io/morningmores/concert-backend:latest
         ports:
         - containerPort: 8080
         env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: "production"
         - name: SPRING_DATASOURCE_URL
-          value: "jdbc:mysql://mysql:3306/concert_db"
+          valueFrom:
+            secretKeyRef:
+              name: backend-secrets
+              key: database-url
         - name: SPRING_DATASOURCE_USERNAME
-          value: "root"
+          valueFrom:
+            secretKeyRef:
+              name: backend-secrets
+              key: database-username
         - name: SPRING_DATASOURCE_PASSWORD
-          value: "rootpassword"
-        - name: AWS_REGION
-          value: "ap-southeast-1"
-        - name: AWS_S3_EVENT_PICTURES_BUCKET
-          value: "concert-event-pictures-singapore-161326240347"
-        - name: AWS_S3_IMAGES_URL
-          value: "https://dzh397ixo71bk.cloudfront.net"
+          valueFrom:
+            secretKeyRef:
+              name: backend-secrets
+              key: database-password
+        - name: SPRING_DATA_REDIS_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: backend-config
+              key: redis-host
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "250m"
+          limits:
+            memory: "1Gi"
+            cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 20
+          periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: concert-backend
+  name: backend-service
 spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 8080
   selector:
-    app: concert-backend
+    app: backend
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: backend-config
+data:
+  redis-host: "redis-service"
+  app-name: "Concert Backend"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: backend-secrets
+type: Opaque
+stringData:
+  database-url: "jdbc:mysql://your-rds-endpoint:3306/concert_db"
+  database-username: "admin"
+  database-password: "changeme"
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: backend-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: backend
+  minReplicas: 2
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 70
+  - type: Resource
+    resource:
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: 80
